<resources>
    <string name="app_name">RealMealer</string>
    <string name="mealerName">Mealer</string>
    <string name="loginImage">This is a lady using a phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="loginButtonCaps">LOGIN</string>
    <string name="signupButtonCaps">SIGN UP</string>
    <string name="getStartedButtonCaps">GET STARTED</string>
    <string name="alreadyHaveAccountGSPage">Already have an account?</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="createClientAccount">Create Client Account</string>
    <string name="createCookAccount">Create Cook Account</string>
    <string name="userfirstName">First Name</string>
    <string name="nextBtn">Next</string>
    <string name="userPrompt">What account would you like to make?</string>
    <string name="createEmail">Email</string>
    <string name="mealPreferences">Meal Preferences</string>
    <string name="cookImageButtonDescription">This is a picture of a cook</string>
    <string name="veganBtn">Vegan</string>
    <string name="halalBtn">Halal</string>
    <string name="kosherBtn">Kosher</string>
    <string name="glutenFreeBtn">Gluten-Free</string>
    <string name="peanutFreeBtn">Peanut-Free</string>
    <string name="otherBtn">Other</string>
    <string name="clientImageButtonDescription">This is a picture of a client</string>
    <string name="mealerlogo">mealerlogo</string>
    <string name="user_account">User account</string>
    <string name="cook_on_mealer">Cook on Mealer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="getting_to_know_you">Getting to know you</string>
    <string name="age">Age</string>
    <string name="address">Address (City, Street, House Number)</string>
    <string name="creditNum">Card Number</string>
    <string name="creditExpiry">MMYY</string>
    <string name="creditSecurity">XXX</string>
    <string name="personal_information">Personal Information</string>
    <string name="cardInformation">Payment Information</string>
    <string name="description">Description</string>
    <string name="description_item">Description: </string>
    <string name="descriptionHint">Write a description of yourself</string>
    <string name="select">Select</string>
    <string name="upload">upload</string>
    <string name="please_select_and_upload_an_image_of_a_void_cheque">Please select an image of a void cheque</string>
    <string name="noneBtn">none</string>
    <string name="preview_of_user_uploaded_image">preview of user uploaded image</string>
    <string name="title_activity_user_home_page">UserHomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="createAccount">Create New Account</string>
    <string name="please_type_your_email_below">Please type your email below</string>
    <string name="submit">submit</string>
    <string name="delivering_to">Delivering To</string>
    <string name="_417_ladbroke_grove">417 Ladbroke Grove</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="title_activity_cook_home_page">CookHomePage</string>
    <string name="complaints">Complaints</string>
    <string name="complaintstext">Complaints:</string>
    <string name="subject">Subject:</string>
    <string name="complain_about">Complaint about:</string>
    <string name="suspend">suspend</string>
    <string name="ban">ban</string>
    <string name="ignore">ignore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountPage">Account Page</string>
    <string name="account">Account</string>
    <string name="to_be_implemented">TO BE IMPLEMENTED</string>
    <string name="refresh">refresh</string>
    <string name="length">length</string>
    <string name="user">User:</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="title_activity_client_home_page">ClientHomePage</string>
    <string name="complaint">complaint</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="my_menu">My Menu</string>
    <string name="calories">Calories:</string>
    <string name="item_name">Item Name:</string>
    <string name="temp">temp</string>
    <string name="title_menu">Menu</string>
    <string name="active_menu">Offered Meals</string>
    <string name="inactive_menu">Unlisted Meals</string>
    <string name="new_menu_item">New menu item</string>
    <string name="edit_menu_item">edit menu item</string>
    <string name="edit_active_menu">edit active menu</string>
    <string name="delete_menu_item">delete menu item</string>
    <string name="name_of_item">Name of Item</string>
    <string name="short_description">Short Description</string>
    <string name="set_item_as_active">Currently Offering Meal?</string>
    <string name="ingredients">Ingredients</string>
    <string name="calories_in_item">Calories in Item</string>
    <string name="separate_ingredients">Separate Ingredients by \';\'</string>
    <string name="add_item_to_menu">save item</string>
    <string name="menu_item_information">Menu Item Information</string>
    <string name="default_menu_image">Default_menu_image</string>
    <string name="upload_picture_of_food">Upload picture of food</string>
    <string name="meals">Meals</string>
    <string name="status_item">Status</string>
    <string name="item">Item</string>
    <string name="channel_name">mealernotif</string>
    <string name="channel_description">mealernotif notification channel</string>
    <string name="price">Price</string>
    <string name="price_text">Enter your price</string>
    <string name="price_item">Price:</string>
    <string-array name="monthDayChoice">
        <item>Days</item>
        <item>Months</item>
    </string-array>
</resources>