<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/newMenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_menu_item"
            android:backgroundTint="@color/lightBrown"/>

        <Button
            android:id="@+id/editActiveMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_active_menu"
            android:backgroundTint="@color/lightBrown"/>

        <Button
            android:id="@+id/editMenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_menu_item"
            android:backgroundTint="@color/lightBrown"/>

        <Button
            android:id="@+id/deleteMenuItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_menu_item"
            android:backgroundTint="@color/lightBrown"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>