<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_account">

    <fragment
        android:id="@+id/navigation_client_home"
        android:name="com.mealer.ui.ui.search.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_client_home" >
        <action
            android:id="@+id/action_navigation_client_home_to_navigation_menu_item_details"
            app:destination="@id/navigation_menu_item_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cook_menu"
        android:name="com.mealer.ui.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_cook_home" >
        <action
            android:id="@+id/action_navigation_cook_menu_to_navigation_edit_menu_item"
            app:destination="@id/navigation_edit_menu_item" />
        <action
            android:id="@+id/action_navigation_cook_menu_to_navigation_new_menu_item"
            app:destination="@id/navigation_new_menu_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_menu_item"
        android:name="com.mealer.ui.ui.menu.MenuEditItemFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu_item_details" >
        <action
            android:id="@+id/action_navigation_edit_menu_item_to_navigation_cook_menu"
            app:destination="@id/navigation_cook_menu" />
    </fragment>

    <fragment
        android:id="@+id/navigation_menu_item_details"
        android:name="com.mealer.ui.ui.search.SearchDetailsFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu_item_details" >
        <action
            android:id="@+id/action_navigation_menu_item_details_to_navigation_client_home"
            app:destination="@id/navigation_client_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_menu_item"
        android:name="com.mealer.ui.ui.menu.MenuNewFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu_item_details" >
        <action
            android:id="@+id/action_navigation_new_menu_item_to_navigation_cook_menu"
            app:destination="@id/navigation_cook_menu" />
    </fragment>

    <fragment
        android:id="@+id/navigation_complaints"
        android:name="com.mealer.ui.ui.complaint.ComplaintsListFragment"
        android:label="@string/complaints"
        tools:layout="@layout/fragment_complaints_list" >
        <action
            android:id="@+id/action_navigation_complaints_to_navigation_complaint"
            app:destination="@id/navigation_complaint" />
    </fragment>

    <fragment
        android:id="@+id/navigation_complaint"
        android:name="com.mealer.ui.ui.complaint.ComplaintFragment"
        android:label="@string/complaint"
        tools:layout="@layout/fragment_complaint" >
        <action
            android:id="@+id/action_navigation_complaint_to_navigation_complaints"
            app:destination="@id/navigation_complaints" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mealer.ui.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.mealer.ui.ui.account.AccountPageFragment"
        android:label="@string/accountPage"
        tools:layout="@layout/fragment_account_page" />
</navigation>