<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <EditText
        android:id="@+id/complaintSubjectP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkGreen"
        android:textColor="@color/darkGreen"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/subject"
        android:autofillHints=""
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/complaintDescriptionP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkGreen"
        android:textColor="@color/darkGreen"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:autofillHints=""
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/complaintSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightBrown"
        android:text="@string/submit" />
</LinearLayout>